<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_gotohome"/>
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_location"
            android:visible="false"
            android:title="@string/menu_map_friends"/>
        <item
            android:id="@+id/nav_picture"
            android:icon="@drawable/ic_menu_camera"
            android:title="Nuevo producto"/>

    </group>

    <item android:title="@string/menu_users">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_signin"
                android:title="@string/menu_login"/>
            <item
                android:id="@+id/nav_signin"
                android:icon="@drawable/ic_menu_signin"
                android:title="@string/btn_signin"/>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_menu_account"
                android:title="@string/menu_your_profile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_signout"
                android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
